rewrite scrobbling and editing logic, other fixes